finishing the resultpage